# zserio-service-grpc-cpp

./: .gitignore  README.md
.github/workflows/: build_linux.yml  build_windows.yml
doc/: BUILD_gRPC.md
examples/calculator/: CMakeLists.txt  CalculatorClient.cpp  CalculatorServer.cpp  README.md
src/: CMakeLists.txt  ZserioServiceGrpc.cpp  ZserioServiceGrpc.h  zserio_service.proto
